--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Staff Deep Dive</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Differences in Salary Among Employees</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -17098,90 +17098,6 @@ Most likely the highest earner was hired for a higher position than the lowest e
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[7]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%</span><span class="k">sql</span><span class="w"> </span>
-
-<span class="k">DROP</span><span class="w"> </span><span class="k">VIEW</span><span class="w"> </span><span class="k">IF</span><span class="w"> </span><span class="k">EXISTS</span><span class="w"> </span><span class="n">new_employee</span><span class="w"></span>
-
-<span class="k">CREATE</span><span class="w"> </span><span class="k">VIEW</span><span class="w"> </span><span class="n">new_employee</span><span class="w"> </span><span class="k">AS</span><span class="w"></span>
-<span class="k">SELECT</span><span class="w"> </span><span class="n">first_name</span><span class="p">,</span><span class="w"> </span><span class="n">last_name</span><span class="p">,</span><span class="w"> </span><span class="n">department</span><span class="p">,</span><span class="w"> </span><span class="n">hire_date</span><span class="p">,</span><span class="w"> </span><span class="n">salary</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">FIRST_VALUE</span><span class="p">(</span><span class="n">salary</span><span class="p">)</span><span class="w"> </span><span class="n">OVER</span><span class="w"> </span><span class="p">(</span><span class="n">PARTITION</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">department</span><span class="w"></span>
-<span class="w">                                 </span><span class="k">ORDER</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">salary</span><span class="w"> </span><span class="k">DESC</span><span class="p">)</span><span class="w"> </span><span class="k">AS</span><span class="w"> </span><span class="n">highest_salary</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">salary</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">FIRST_VALUE</span><span class="p">(</span><span class="n">salary</span><span class="p">)</span><span class="w"> </span><span class="n">OVER</span><span class="w"> </span><span class="p">(</span><span class="n">PARTITION</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">department</span><span class="w"></span>
-<span class="w">                                          </span><span class="k">ORDER</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">salary</span><span class="w"> </span><span class="k">DESC</span><span class="p">)</span><span class="w"> </span><span class="k">AS</span><span class="w"> </span><span class="n">salarydiff</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">FIRST_VALUE</span><span class="p">(</span><span class="n">hire_date</span><span class="p">)</span><span class="w"> </span><span class="n">OVER</span><span class="w"> </span><span class="p">(</span><span class="n">PARTITION</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">department</span><span class="w"></span>
-<span class="w">                                    </span><span class="k">ORDER</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">salary</span><span class="w"> </span><span class="k">DESC</span><span class="p">)</span><span class="w"> </span><span class="k">AS</span><span class="w"> </span><span class="n">hiredate_highestsalary</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">AGE</span><span class="p">(</span><span class="n">hire_date</span><span class="p">,</span><span class="w"> </span><span class="n">FIRST_VALUE</span><span class="p">(</span><span class="n">hire_date</span><span class="p">)</span><span class="w"> </span><span class="n">OVER</span><span class="w"> </span><span class="p">(</span><span class="n">PARTITION</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">department</span><span class="w"></span>
-<span class="w">                                                   </span><span class="k">ORDER</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">salary</span><span class="w"> </span><span class="k">DESC</span><span class="p">))</span><span class="k">AS</span><span class="w"> </span><span class="n">hiredate_diff</span><span class="w"></span>
-<span class="k">FROM</span><span class="w"> </span><span class="n">employee</span><span class="p">;</span><span class="w"></span>
-
-
-<span class="k">SELECT</span><span class="w"> </span><span class="n">new_employee</span><span class="p">.</span><span class="n">department</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">new_employee</span><span class="p">.</span><span class="n">salarydiff</span><span class="p">,</span><span class="w"></span>
-<span class="w">       </span><span class="n">hiredate_diff</span><span class="w"></span>
-<span class="k">FROM</span><span class="w"> </span><span class="n">new_employee</span><span class="w"></span>
-<span class="k">INNER</span><span class="w"> </span><span class="k">JOIN</span><span class="w"></span>
-<span class="w">    </span><span class="p">(</span><span class="k">SELECT</span><span class="w"> </span><span class="n">department</span><span class="p">,</span><span class="w"> </span><span class="k">MIN</span><span class="p">(</span><span class="n">salarydiff</span><span class="p">)</span><span class="w"> </span><span class="k">AS</span><span class="w"> </span><span class="n">salarydiff</span><span class="w"></span>
-<span class="w">    </span><span class="k">FROM</span><span class="w"> </span><span class="n">new_employee</span><span class="w"></span>
-<span class="w">    </span><span class="k">GROUP</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">department</span><span class="p">)</span><span class="w"> </span><span class="k">AS</span><span class="w"> </span><span class="n">b</span><span class="w"></span>
-<span class="k">ON</span><span class="w"> </span><span class="n">new_employee</span><span class="p">.</span><span class="n">department</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">b</span><span class="p">.</span><span class="n">department</span><span class="w"></span>
-<span class="k">AND</span><span class="w"> </span><span class="n">new_employee</span><span class="p">.</span><span class="n">salarydiff</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">b</span><span class="p">.</span><span class="n">salarydiff</span><span class="w"></span>
-<span class="k">ORDER</span><span class="w"> </span><span class="k">BY</span><span class="w"> </span><span class="n">hiredate_diff</span><span class="p">;</span><span class="w"></span>
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-
-
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre> * postgresql://postgres:***@localhost:5432/staff
-(psycopg2.errors.SyntaxError) syntax error at or near &#34;CREATE&#34;
-LINE 3: CREATE VIEW new_employee AS
-        ^
-
-[SQL: DROP VIEW IF EXISTS new_employee
-
-CREATE VIEW new_employee AS
-SELECT first_name, last_name, department, hire_date, salary,
-       FIRST_VALUE(salary) OVER (PARTITION BY department
-                                 ORDER BY salary DESC) AS highest_salary,
-       salary - FIRST_VALUE(salary) OVER (PARTITION BY department
-                                          ORDER BY salary DESC) AS salarydiff,
-       FIRST_VALUE(hire_date) OVER (PARTITION BY department
-                                    ORDER BY salary DESC) AS hiredate_highestsalary,
-       AGE(hire_date, FIRST_VALUE(hire_date) OVER (PARTITION BY department
-                                                   ORDER BY salary DESC))AS hiredate_diff
-FROM employee;]
-(Background on this error at: https://sqlalche.me/e/14/f405)
-</pre>
-</div>
-</div>
-
-</div>
-
-</div>
-
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
